build_output.log

> Configure project :fabric
Fabric Loom: 1.5.8

> Task :common:compileJava UP-TO-DATE
> Task :common:processResources UP-TO-DATE
> Task :common:classes UP-TO-DATE
> Task :common:jar
> Task :common:downloadMcpConfig
> Task :common:extractSrg UP-TO-DATE
> Task :common:createMcpToSrg UP-TO-DATE
> Task :common:reobfJar
> Task :common:jarJar SKIPPED
> Task :common:reobfJarJar SKIPPED
> Task :common:assemble
> Task :common:compileTestJava NO-SOURCE
> Task :common:processTestResources NO-SOURCE
> Task :common:testClasses UP-TO-DATE
> Task :common:test NO-SOURCE
> Task :common:check UP-TO-DATE
> Task :common:build
> Task :fabric:compileJava UP-TO-DATE
> Task :fabric:processResources UP-TO-DATE
> Task :fabric:classes UP-TO-DATE
> Task :fabric:jar UP-TO-DATE
> Task :fabric:remapJar UP-TO-DATE
> Task :fabric:remapSourcesJar SKIPPED
> Task :fabric:assemble UP-TO-DATE
> Task :fabric:compileTestJava NO-SOURCE
> Task :fabric:processTestResources NO-SOURCE
> Task :fabric:testClasses UP-TO-DATE
> Task :fabric:test NO-SOURCE
> Task :fabric:validateAccessWidener NO-SOURCE
> Task :fabric:check UP-TO-DATE
> Task :fabric:build UP-TO-DATE

> Task :forge:compileJava FAILED
/home/az/project/BusinessCraft/forge/src/main/java/com/quackers29/businesscraft/forge/init/ForgeModBlockEntities.java:13: error: cannot find symbol
            () -> BlockEntityType.Builder.of(ForgeTownInterfaceEntity::new, ForgeModBlocks.TOWN_INTERFACE_BLOCK.get()).build(null));
                                                                                          ^
  symbol:   variable TOWN_INTERFACE_BLOCK
  location: class ForgeModBlocks
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':forge:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.8/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
12 actionable tasks: 4 executed, 8 up-to-date
